--- a/MyWorkDashboard.Shared/Dashboard.razor
+++ b/MyWorkDashboard.Shared/Dashboard.razor
@@ -5,17 +5,17 @@
             @*カレンダーとか*@
             <SchedulingFrame />
         </Col>
-        <Col Style="overflow-y: scroll;" Xs="24" Sm="24" Md="12" Lg="16" Xl="18">
+        <Col Xs="24" Sm="24" Md="12" Lg="16" Xl="18">
             <Row Class="input-container">
                 <Col Span="24">
                         @*詳細入力エリア*@
-                <TaskInputForm />
+                    <TaskInputForm />
                 </Col>
             </Row>
             <Row Class="statistic-container">
                 <Col Span="24">
                         @*統計エリア*@
-                <StatisticFrame />
+                    <StatisticFrame />
                 </Col>
             </Row>
         </Col>
