固定メニューバー作成 #18

--- a/MyWorkDashboard.Shared/Components/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskInputForm.razor
@@ -67,15 +67,6 @@
         </Col>
     </Row>
 
-    <Row Class="input-item-row">
-        <Col Span="24">
-            @if (SelectedWorkCodeFamily != null)
-            {
-            <p>@($"{SelectedWorkCodeFamily.Description}")</p>
-            }
-        </Col>
-    </Row>
-
 </div>
 
 <div hidden="@(!_isEmpty)">
@@ -84,6 +75,7 @@
             Title="タスクが選択されていません"
             SubTitle="左側のタイムラインでタスクを選択すると編集が可能になります。">
     </Result>
+    <Skeleton/>
 </div>
 
 <style>
@@ -93,7 +85,6 @@
     }
 
     .task-frame {
-        border: 1px black solid;
         height: 100%;
         padding: 10px;
     }
@@ -191,6 +182,12 @@
     {
         public string Label { get; set; }
         public WorkCodeFamily Value { get; set; }
+
+        public WorkCodeVM(WorkCodeFamily value)
+        {
+            Value = value;
+            Label = $"{value.Category.Id}:{value.Category.Name} {value.WorkCode.Name} ({value.WorkCode.Name})";
+        }
     }
 
     List<WorkCodeVM> _codes;
@@ -200,7 +197,7 @@
         _codes = new List<WorkCodeVM>();
         foreach (WorkCodeFamily family in schedulingServive.GetAllWorkCodeFamily())
         {
-            _codes.Add(new WorkCodeVM { Value = family, Label = family.ToString() });
+            _codes.Add(new WorkCodeVM(family));
         }
 
         schedulingServive.SelectedDutyChanged += OnSelectedDutyChanged;
