--- a/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
+++ b/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
@@ -4,7 +4,7 @@
 @inject SchedulingServive schedulingServive
 
 <div style="height: 100%; width: 100%;" @oncontextmenu:stopPropagation @oncontextmenu:preventDefault>
-    <Row Style="height: 5%;">
+@*    <Row Style="height: 5%;">
         <Col>
             <Button Type="@ButtonType.Default" Icon="@IconType.Outline.Left" Shape="@ButtonShape.Circle" OnClick="GoYesterday"></Button>
             <DatePicker AllowClear="false" Size="@DatePickerSize.Large" TValue="DateTime?" Picker="@DatePickerType.Date" @bind-Value="_dateTime" OnChange="OnDateChanged"/>
@@ -16,8 +16,8 @@
             </Tooltip>
         </Col>
     </Row>
-
-    <Row Style="height: 95%;">
+*@
+    <Row Style="height: 100%;">
         <div class="schedule-area">
             
             @foreach (TimeRow row in _rows.Rows)
@@ -125,7 +125,7 @@
 
 @code {
 
-    DateTime? _dateTime;
+    DateOnly? _dateTime => schedulingServive.SelectedDate;
     private TimeRowCollection _rows;
     private readonly DutyBarCollection _duties = new DutyBarCollection();
 
@@ -135,12 +135,17 @@
 
         schedulingServive.SelectedDutyChanged += OnSelectedDutyChanged;
         schedulingServive.DutyPropertyChanged += OnPropertyChanged;
+        schedulingServive.SelectedDateChanged += OnSelectedDateChanged;
         _duties.ItemSelected += DutiesOnItemSelected;
 
-        _dateTime = DateTime.Now;
-        schedulingServive.ChangeSelectedDate(DateOnly.FromDateTime(_dateTime.Value), this);
+        ShowTimeBars(_dateTime.Value);
+        StateHasChanged();
+    }
 
-        ShowTimeBars(DateTime.Now);
+    private void OnSelectedDateChanged(object? sender, EventArgs e)
+    {
+        if(sender == this) return;
+        ShowTimeBars(_dateTime.Value);
         StateHasChanged();
     }
 
@@ -172,33 +177,14 @@
         schedulingServive.ChangeSelectedDuty(e.SelectedDuty, this);
     }
 
-    private void OnDateChanged(DateTimeChangedEventArgs e)
-    {
-        ShowTimeBars(e.Date);
-        schedulingServive.ChangeSelectedDuty(null, this);
-        schedulingServive.ChangeSelectedDate(DateOnly.FromDateTime(_dateTime.Value), this);
-    }
 
-    private void GoYesterday()
-    {
-        _dateTime = _dateTime.Value.AddDays(-1);
-        OnDateChanged(new DateTimeChangedEventArgs(){Date = _dateTime.Value});
-    }
-
-    private void GoTommorrow()
-    {
-        _dateTime = _dateTime.Value.AddDays(1);
-        OnDateChanged(new DateTimeChangedEventArgs(){Date = _dateTime.Value});
-    }
-
-
-    private void ShowTimeBars(DateTime datetime)
+    private void ShowTimeBars(DateOnly date)
     {
         // 選択中のIDを覚えておく
         var selectedId = _duties.Bars.FirstOrDefault(d => d.IsSelected)?.Duty.Id;
 
         _duties.Clear();
-        foreach (Duty duty in schedulingServive.FindDutiesByDate(DateOnly.FromDateTime(datetime)))
+        foreach (Duty duty in schedulingServive.FindDutiesByDate(date))
         {
             int top = _rows.TimeToPixel(duty.StartTime);
             int bottom = _rows.TimeToPixel(duty.EndTime);
@@ -212,16 +198,6 @@
         }
     }
 
-    private void AddNewSchedule()
-    {
-        if (_dateTime == null) return;
-
-        Duty created = schedulingServive.AddNewSchedule(DateOnly.FromDateTime(_dateTime.Value));
-        ShowTimeBars(_dateTime.Value);
-        StateHasChanged();
-        schedulingServive.ChangeSelectedDuty(created, new object());
-    }
-
     private void AppendNewSchedule(TimeOnly selectedTimeBlock)
     {
         if (_dateTime == null) return;
@@ -230,7 +206,7 @@
 
         TimeOnly start = selectedTimeBlock;
         TimeOnly end = selectedTimeBlock.AddMinutes(defaultSpanMinute);
-        DateOnly date = DateOnly.FromDateTime(_dateTime.Value);
+        DateOnly date = _dateTime.Value;
         
         // 指定した時刻を含む空き時間を検索する
         var ranges = schedulingServive.GetFreeTimeSpans(date).ToArray();
