--- a/MyWorkDashboard.Shared/Dashboard.razor
+++ b/MyWorkDashboard.Shared/Dashboard.razor
@@ -1,46 +1,53 @@
-﻿<div>
+﻿@using MyWorkDashboard.Shared.Services
 
-    <Row>
-        <Col Class="schedule-container" Xs="24" Sm="24" Md="12" Lg="8" Xl="6">
-            @*カレンダーとか*@
-            <SchedulingFrame />
-        </Col>
-        <Col Xs="24" Sm="24" Md="12" Lg="16" Xl="18">
-            <Row Class="input-container">
-                <Col Span="24">
-                        @*詳細入力エリア*@
-                    <TaskInputForm />
+<Layout>
+    <Header Style="position: fixed; z-index: 1; width: 100%;">
+        <TopMenu/>
+    </Header>
+    <Content Style="padding:0px; margin-top: 50px; ">
+        <div>
+            <Row>
+                <Col Class="schedule-container" Xs="24" Sm="24" Md="12" Lg="8" Xl="6">
+                    @*カレンダーとか*@
+                    <SchedulingFrame />
                 </Col>
-            </Row>
-            <Collapse DefaultActiveKey="@(new[]{"1"})">
-                <Panel Header="ToDo" Key="1">
-                    @*ToDoリスト*@
-                    <ToDoList/>
-                </Panel>
-                <Panel Header="集計" Key="2">
-                    <Row Class="statistic-container">
+                <Col Xs="24" Sm="24" Md="12" Lg="16" Xl="18">
+                    <Row Class="input-container">
                         <Col Span="24">
-                            @*統計エリア*@
-                            <StatisticFrame/>
+                            @*詳細入力エリア*@
+                            <TaskInputForm />
                         </Col>
                     </Row>
-                </Panel>
-            </Collapse>
-        </Col>
-    </Row>
+                    <Collapse DefaultActiveKey="@(new[]{"1"})">
+                        <Panel Header="ToDo" Key="1">
+                            @*ToDoリスト*@
+                            <ToDoList/>
+                        </Panel>
+                        <Panel Header="集計" Key="2">
+                            <Row Class="statistic-container">
+                                <Col Span="24">
+                                    @*統計エリア*@
+                                    <StatisticFrame/>
+                                </Col>
+                            </Row>
+                        </Panel>
+                    </Collapse>
+                </Col>
+            </Row>
+        </div>
+    </Content>
+</Layout>
 
-</div>
 
 <style>
     .schedule-container {
-        height: 100vh;
+        height: 95vh;
         padding: 20px;
         margin: 0px;
     }
 
     .input-container {
-        min-height: 50vh;
-        padding: 20px;
+        padding: 10px;
         margin: 0px;
     }
 
@@ -68,7 +75,7 @@
         }
 
         .schedule-container {
-            height: 100vh;
+            height: 95vh;
         }
     }
 
@@ -79,7 +86,7 @@
         }
 
         .schedule-container {
-            height: 100vh;
+            height: calc(100vh - 50px);
         }
     }
 
@@ -87,4 +94,7 @@
 
 @code {
 
+
+
+    
 }
