コンボボックスに表示される項目に作業コード名が二重で表示される不具合の修正

--- a/MyWorkDashboard.Shared/Components/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskInputForm.razor
@@ -187,7 +187,7 @@
         public WorkCodeVM(WorkCodeFamily value)
         {
             Value = value;
-            Label = $"{value.Category.Id}:{value.Category.Name} {value.WorkCode.Name} ({value.WorkCode.Name})";
+            Label = $"{value.Category.Id}:{value.Category.Name} {value.WorkCode.Id} ({value.WorkCode.Name})";
         }
     }
 
