ドメインクラスを移動

--- a/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
+++ b/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
@@ -1,5 +1,6 @@
 ﻿@using MyWorkDashboard.Shared.Services
 @using System.ComponentModel
+@using MyWorkDashboard.Shared.Duties
 
 @inject SchedulingServive schedulingServive
 
