--- a/MyWorkDashboard.Shared/Components/StatisticFrame.razor
+++ b/MyWorkDashboard.Shared/Components/StatisticFrame.razor
@@ -1,6 +1,7 @@
 ﻿@using MyWorkDashboard.Shared.Services
 @using System.ComponentModel
 @using AntDesign.TableModels
+@using MyWorkDashboard.Shared.Duties
 
 @inject SchedulingServive schedulingServive
 @inject MessageService messageService
