--- a/MyWorkDashboard.Shared/Components/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskInputForm.razor
@@ -1,5 +1,7 @@
 ﻿@using MyWorkDashboard.Shared.Services
 @using System.ComponentModel
+@using MyWorkDashboard.Shared.Duties
+@using MyWorkDashboard.Shared.WorkCodeFamilies
 
 @inject MessageService messageService
 @inject SchedulingServive schedulingServive
