--- a/MyWorkDashboard.Shared/Components/ToDoList.razor
+++ b/MyWorkDashboard.Shared/Components/ToDoList.razor
@@ -1,6 +1,6 @@
 ﻿@using AntDesign
 @using MyWorkDashboard.Shared.Services
-@using WorkBord.ToDoTasks
+@using MyWorkDashboard.Shared.ToDoTasks
 
 @inject SchedulingServive schedulingServive
 @inject NotificationService notificationService
