--- a/MyWorkDashboard.Shared/Dashboard.razor
+++ b/MyWorkDashboard.Shared/Dashboard.razor
@@ -2,36 +2,58 @@
 
 <Layout>
     <Header Style="position: fixed; z-index: 1; width: 100%;">
-        <TopMenu/>
+        <TopMenu />
     </Header>
     <Content Style="padding:0px; margin-top: 50px; ">
         <div>
             <Row>
-                <Col Class="schedule-container" Xs="24" Sm="24" Md="12" Lg="8" Xl="6">
-                    @*カレンダーとか*@
-                    <SchedulingFrame />
+                <Col Xs="24" Sm="24" Md="12" Lg="8" Xl="6" Style="padding: 10px;">
+                    <Tabs @bind-ActiveKey="@activeKey" Type="@TabType.Card" Animated>
+                        <TabPane Key="1">
+                            <TabTemplate>
+                                <span><Icon Type="calendar" Theme="outline"/>タイムライン</span>
+                            </TabTemplate>
+                            <ChildContent>
+                                <div class="schedule-container">
+                                    @*タイムライン*@
+                                    <SchedulingFrame/>
+                                </div>
+                            </ChildContent>
+                        </TabPane>
+                        <TabPane Key="2">
+                            <TabTemplate>
+                                <span><Icon Type="unordered-list" Theme="outline"/>リスト</span>
+                            </TabTemplate>
+                            <ChildContent>
+                                <div class="schedule-container">
+                                    @*リスト*@
+                                    <TaskListPanel/>
+                                </div>
+                            </ChildContent>
+                        </TabPane>
+                    </Tabs>
                 </Col>
                 <Col Xs="24" Sm="24" Md="12" Lg="16" Xl="18">
-                    <Row Class="input-container">
-                        <Col Span="24">
+                <Row Class="input-container">
+                    <Col Span="24">
                             @*詳細入力エリア*@
-                            <TaskInputForm />
-                        </Col>
-                    </Row>
-                    <Collapse DefaultActiveKey="@(new[]{"1"})">
-                        <Panel Header="ToDo" Key="1">
+                    <TaskInputForm />
+                    </Col>
+                </Row>
+                <Collapse DefaultActiveKey="@(new[]{"1"})">
+                    <Panel Header="ToDo" Key="1">
                             @*ToDoリスト*@
-                            <ToDoList/>
-                        </Panel>
-                        <Panel Header="集計" Key="2">
-                            <Row Class="statistic-container">
-                                <Col Span="24">
+                        <ToDoList />
+                    </Panel>
+                    <Panel Header="集計" Key="2">
+                        <Row Class="statistic-container">
+                            <Col Span="24">
                                     @*統計エリア*@
-                                    <StatisticFrame/>
-                                </Col>
-                            </Row>
-                        </Panel>
-                    </Collapse>
+                            <StatisticFrame />
+                            </Col>
+                        </Row>
+                    </Panel>
+                </Collapse>
                 </Col>
             </Row>
         </div>
@@ -39,10 +61,13 @@
 </Layout>
 
 
+
 <style>
+
+
     .schedule-container {
-        height: 95vh;
-        padding: 20px;
+        height: calc(100vh - 130px);
+        /*padding: 20px;*/
         margin: 0px;
     }
 
@@ -56,45 +81,10 @@
         margin: 0px;
     }
 
-    @@media screen and (min-width:480px) {
-        .statistic-container {
-            display: none;
-        }
-
-        .schedule-container {
-            height: 50vh;
-        }
-
-        /*　for iPhone Landscape　(iPhone 横)　*/
-    }
-
-    @@media screen and (min-width:768px) and ( max-width:1024px) {
-        /*　for iPad 　*/
-        .statistic-container {
-            display: inherit;
-        }
-
-        .schedule-container {
-            height: 95vh;
-        }
-    }
-
-    @@media screen and (min-width:1024px) {
-        /*　for PC　*/
-        .statistic-container {
-            display: inherit;
-        }
-
-        .schedule-container {
-            height: calc(100vh - 50px);
-        }
-    }
-
 </style>
 
+
 @code {
+    string activeKey { get; set; } = "1";
 
-
-
-    
 }
