作業コード等のメンテナンス画面の作成 #14

--- a/DevSamples/Pages/Index.razor
+++ b/DevSamples/Pages/Index.razor
@@ -1,7 +1,50 @@
 ﻿@page "/"
 
 
-<h1>Hello, world!</h1>
+<SortableContainer TItem="ViewItem" Items="items" @ref="_container" SelectedStyle="background-color: red;">
+    <ItemTemplate>
+        あああ @context.Name
+    </ItemTemplate>
+</SortableContainer>
 
-Welcome to your new app.
 
+<Button OnClick="GoUp">上</Button>
+<Button OnClick="GoDown">下</Button>
+
+<DraggablePanel >
+    <div style="height: 50px; width: 100px; background-color: aquamarine;"></div>
+</DraggablePanel>
+
+
+@code {
+
+    SortableContainer<ViewItem> _container;
+
+    ViewItem[] items = new ViewItem[] { 
+        new ViewItem("項目1") 
+        , new ViewItem("項目2")
+        , new ViewItem("項目3")
+        , new ViewItem("項目4")
+    };
+
+    private void GoUp()
+    {
+        _container.Up();
+        var arr = _container.SortedItems;
+    }
+
+    private void GoDown()
+    {
+        _container.Down();
+    }
+
+    class ViewItem
+    {
+        public string Name { get; set; }
+
+        public ViewItem(string name)
+        {
+            Name = name;
+        }
+    }
+}
