--- a/DevSamples/_Imports.razor
+++ b/DevSamples/_Imports.razor
@@ -9,3 +9,5 @@
 @using DevSamples
 @using DevSamples.Shared
 @using AntDesign
+@using MyWorkDashboard.Shared
+@using MyWorkDashboard.Shared.Components
