--- a/MyWorkDashboard.Shared/Components/TaskListPanel.razor
+++ b/MyWorkDashboard.Shared/Components/TaskListPanel.razor
@@ -110,7 +110,7 @@
             {
                 isSelected = ( duty.Id == selectedId);
             }
-            string colorCode = schedulingServive.GetWorkCodeFamilyColorCode(duty.Id);
+            string colorCode = schedulingServive.GetDutyColorCode(duty.Id);
             _duties.Add(new DutyBar(duty, 60, colorCode) { IsSelected = isSelected });
         }
     }
