--- a/MyWorkDesktop/MainWindow.xaml
+++ b/MyWorkDesktop/MainWindow.xaml
@@ -10,7 +10,7 @@
     Width="800"
     Height="450"
     WindowState="Maximized"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Icon="Resources/image.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
